# Is-She-Real

./: .env  .env.example  .gitignore  .gitlab-ci.yml  DNS-CHECKLIST.md  Dockerfile  README.md  deploy.sh  fly.toml  index.html  mcp_secrets_server.py  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  requirements.txt  styles.css  tailwind.config.ts  tsconfig.json  vercel.json
api/: index.py
app/: detector.py  globals.css  layout.tsx  main.py  metrics.py  normalize.py  openai_assess.py  page.tsx  sitemap.ts  social.py
app/(site)/: page.tsx
app/robots.txt/: route.ts
components/: AuthenticityDashboard.tsx  DomeGallery.module.css  DomeGallery.tsx
components/lib/: accounts.ts
components/site/: blog-preview.tsx  contact-form.tsx  email-capture.tsx  faq.tsx  feature-card.tsx  features-grid.tsx  footer.tsx  hero.tsx  metrics.tsx  pricing-table.tsx  site-header.tsx  split-cta.tsx  testimonials.tsx  theme-provider.tsx  theme-toggle.tsx  trust-bar.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  sheet.tsx  switch.tsx  tabs.tsx  toast.tsx  tooltip.tsx  use-toast.ts
daletion/: index.html
hooks/: use-prefers-reduced-motion.ts
js/: app.js  config.js  fetchers.js  geo.js  main.js  scoring.js  utils.js
lib/: animations.ts  copy.ts  design-tokens.ts  posts.ts
privacy/: index.html
src/: main.py
src/is_she_real/: __init__.py  (+6 more)
styles/: globals.css
tests/: test_detector.py  test_health.py  test_metrics.py  test_openai_verify.py  test_protection.py  test_social_assess.py
tos/: index.html
(+9 files in other folders)
