[project]
name = "is-she-real"
version = "0.1.0"
description = "FastAPI backend for Is-She-Real running on Vercel serverless."
readme = "README.md"
requires-python = ">=3.12"

# Put ONLY what you actually import at runtime.
# If you later add heavier libs, lazy-import inside endpoints to avoid cold-start crashes.
dependencies = [
  "fastapi>=0.111",
  "pydantic>=2.7",
  "httpx>=0.27",
  "Pillow>=10.4",
  "python-multipart>=0.0.9"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]  # harmless on non-uv systems; Vercel uses uv under the hood
# If you later pin versions or lock, uv will write uv.lock which Vercel will respect.