[project]
name = "is-she-real"
version = "1.0.0"
description = "LLM-powered evaluator for social media account authenticity"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Is She Real"}]
dependencies = [
  "openai>=1.35.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "typer>=0.12",
  "python-dotenv>=1.0"
]

[project.scripts]
is-she-real = "is_she_real.cli:app"

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "pytest-mock>=3.14"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
